--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.url =  jdbc:mysql://localhost:3306/CodeCraft?useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = 76feb6b6601f91abb5079e6433f4aec9b4e988b8
+spring.datasource.password =
 
