--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
     </parent>
 
     <dependencies>
+    <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.9</version>
+</dependency>
     	<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
