--- a/static/package.json
+++ b/static/package.json
@@ -10,17 +10,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "react": "^16.5.2",
+    "draft-js": "^0.10.5",
+    "react": "^16.6.3",
     "react-ace": "^6.2.0",
-    "react-dom": "^16.5.2",
-    "sass": "^1.14.2",
-    "webpack": "^4.22.0",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
+    "react-star-rating-component": "^1.4.1",
+    "sass": "^1.15.1",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {}
