--- a/static/package.json
+++ b/static/package.json
@@ -15,10 +15,16 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
+    "chart.js": "^2.7.3",
     "draft-js": "^0.10.5",
     "react": "^16.6.3",
     "react-ace": "^6.2.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-star-rating-component": "^1.4.1",
