--- a/static/package.json
+++ b/static/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.0.4",
     "chart.js": "^2.7.3",
     "draft-js": "^0.10.5",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-ace": "^6.2.0",
     "react-chartjs-2": "^2.7.4",
