--- a/static/package.json
+++ b/static/package.json
@@ -18,9 +18,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@vx/gradient": "0.0.165",
+    "@vx/group": "0.0.170",
+    "@vx/hierarchy": "0.0.179",
+    "@vx/shape": "0.0.179",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "chart.js": "^2.7.3",
+    "css-loader": "^1.0.1",
+    "d3-hierarchy": "^1.1.8",
     "draft-js": "^0.10.5",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
@@ -30,6 +36,8 @@
     "react-router-dom": "^4.3.1",
     "react-star-rating-component": "^1.4.1",
     "sass": "^1.15.1",
+    "storm-react-diagrams": "^5.2.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
   },
