--- a/static/package.json
+++ b/static/package.json
@@ -33,8 +33,10 @@
     "react-ace": "^6.2.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
+    "react-move": "^2.8.0",
     "react-router-dom": "^4.3.1",
     "react-star-rating-component": "^1.4.1",
+    "reactjs-popup": "^1.3.1",
     "sass": "^1.15.1",
     "storm-react-diagrams": "^5.2.1",
     "style-loader": "^0.23.1",
