--- a/static/package.json
+++ b/static/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-star-rating-component": "^1.4.1",
+    "react-transition-group": "^1.2.1",
     "reactjs-popup": "^1.3.1",
     "sass": "^1.15.1",
     "style-loader": "^0.23.1",
