--- a/static/package.json
+++ b/static/package.json
@@ -38,6 +38,7 @@
     "react-transition-group": "^1.2.1",
     "reactjs-popup": "^1.3.1",
     "sass": "^1.15.1",
+    "string-similarity": "^2.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
