--- a/static/package.json
+++ b/static/package.json
@@ -31,6 +31,7 @@
     "draft-js-export-html": "^1.2.0",
     "draft-js-utils": "^1.2.0",
     "lodash": "^4.17.11",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-ace": "^6.2.0",
     "react-chartjs-2": "^2.7.4",
@@ -40,6 +41,7 @@
     "react-transition-group": "^1.2.1",
     "reactjs-popup": "^1.3.1",
     "sass": "^1.15.1",
+    "sass-loader": "^7.1.0",
     "string-similarity": "^2.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
