--- a/FrontEnd/.babelrc
+++ b/FrontEnd/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-react", "@babel/preset-env"],
-  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
+  "plugins": ["@babel/plugin-proposal-object-rest-spread", "syntax-dynamic-import"]
 }
