--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "@vx/shape": "0.0.179",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chart.js": "^2.7.3",
     "css-loader": "^1.0.1",
     "d3-hierarchy": "^1.1.8",
