--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -26,11 +26,13 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chart.js": "^2.7.3",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^1.0.1",
     "d3-hierarchy": "^1.1.8",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "draft-js-utils": "^1.2.0",
+    "immutable": "^3.8.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "node-sass-utils": "^1.1.2",
@@ -38,12 +40,15 @@
     "react-ace": "^6.2.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-star-rating-component": "^1.4.1",
     "react-transition-group": "^1.2.1",
     "reactjs-popup": "^1.3.1",
     "sass": "^1.15.1",
     "sass-loader": "^7.1.0",
+    "slate": "^0.44.6",
+    "slate-react": "^0.21.12",
     "string-similarity": "^2.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
