--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ asn1crypto==0.24.0
 cffi==1.11.5
 Click==7.0
 cryptography==2.4.2
+cycler==0.10.0
 Flask==1.0.2
 Flask-MySQL==1.4.0
 idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
+kiwisolver==1.0.1
 MarkupSafe==1.1.0
+matplotlib==3.0.2
+numpy==1.15.4
 pycparser==2.19
 PyMySQL==0.9.2
+pyparsing==2.3.0
+python-dateutil==2.7.5
 six==1.11.0
 Werkzeug==0.14.1
